Closed
Bug 350930
Opened 19 years ago
Closed 19 years ago
crashes [@ SearchTable]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.8.1
People
(Reporter: dbaron, Assigned: dbaron)
References
Details
(Keywords: fixed1.8.1, topcrash)
Crash Data
Attachments
(2 files)
|
1.19 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
|
1.24 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
beltzner
:
approval1.8.1+
|
Details | Diff | Splinter Review |
There have been continued crashes in pldhash code (in SearchTable) following the fix for bug 334177. Some of the user comments mention shutdown; some don't. The only theory I have so far is that they're all shutdown crashes, but some of the users got confused when reporting. (I think I've seen that before for crashes that were clearly shutdown crashes by the stack.)
The talkback incidents all look pretty much like this:
Incident ID: 22723409
Stack Signature SearchTable 69be2923
Product ID Firefox2
Build ID 2006082101
Trigger Time 2006-08-31 03:05:45.0
Platform Win32
Operating System Windows NT 5.1 build 2600
Module xpcom_core.dll + (0000147a)
URL visited
User Comments
Since Last Crash 477 sec
Total Uptime 477 sec
Trigger Reason Access violation
Source File, Line No. c:/builds/tinderbox/Fx-Mozilla1.8-release/WINNT_5.2_Depend/mozilla/xpcom/build/pldhash.c, line 414
Stack Trace
SearchTable [mozilla/xpcom/build/pldhash.c, line 414]
PL_DHashTableOperate [mozilla/xpcom/build/pldhash.c, line 557]
nsGenericDOMDataNode::~nsGenericDOMDataNode [mozilla/content/base/src/nsGenericDOMDataNode.cpp, line 72]
nsTextNode::`scalar deleting destructor'
My one theory so far is that I'm forgetting to set the ops pointer to null after destroying the hash table -- a regression from some of my leak fixes, I think.
| Assignee | ||
Comment 1•19 years ago
|
||
Attachment #236321 -
Flags: superreview?(bugmail)
Attachment #236321 -
Flags: review?(bugmail)
| Assignee | ||
Comment 2•19 years ago
|
||
This is a really trivial patch -- it nulls out a pointer that we null check before accessing the objects that we're destroying here. I'm not sure that it's the cause of these crashes, but it could cause crashes (for a text node that's in the range list hash but not the event listener manager hash).
Attachment #236323 -
Flags: superreview?(bugmail)
Attachment #236323 -
Flags: review?(bugmail)
Attachment #236323 -
Flags: approval1.8.1?
| Assignee | ||
Updated•19 years ago
|
Flags: blocking1.8.1?
| Assignee | ||
Comment 3•19 years ago
|
||
Hrm. I think I should have used bug 330683 instead of filing this duplicate, but at this point I'll leave it separate in case it doesn't fix the crashes in talkback.
Blocks: 330683
Attachment #236321 -
Flags: superreview?(bugmail)
Attachment #236321 -
Flags: superreview+
Attachment #236321 -
Flags: review?(bugmail)
Attachment #236321 -
Flags: review+
Attachment #236323 -
Flags: superreview?(bugmail)
Attachment #236323 -
Flags: superreview+
Attachment #236323 -
Flags: review?(bugmail)
Attachment #236323 -
Flags: review+
| Assignee | ||
Comment 4•19 years ago
|
||
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8.1
Comment 5•19 years ago
|
||
Comment on attachment 236323 [details] [diff] [review]
branch patch
a=beltzner on behalf of 181drivers
Attachment #236323 -
Flags: approval1.8.1? → approval1.8.1+
| Assignee | ||
Comment 7•19 years ago
|
||
Have not seen any reports on branch talkback (Firefox2) since checkin.
| Assignee | ||
Comment 8•19 years ago
|
||
*** Bug 330683 has been marked as a duplicate of this bug. ***
Updated•14 years ago
|
Crash Signature: [@ SearchTable]
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•