Null out hash ops after destroying table.  b=350930  r+sr=sicking